--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,9 +7,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - name: Install libgl1
+    - name: Requirements setup
       run: |
-        sudo apt-get install -y libgl1-mesa-dev
+        sudo apt-get install -y -q --no-install-recommends \
+              libgl1-mesa-dev \
+              xorg-dev \
+              gosu
 
     - name: Set up Go 1.13
       uses: actions/setup-go@v1
