updated readme and changelog

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 *.dll
 *.so
 *.dylib
+.DS_Store
 
 # Test binary, build with `go test -c`
 *.test
@@ -15,6 +16,8 @@ build/
 
 # path where comics are downloaded
 comics/
+fyne-cross/
 
 # binary
 comics-downloader
+
